--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,23 @@
+.gitattributes
 bin
+
+# VS files
+*.sln      # merge=binary
+*.csproj   # merge=binary
+*.vbproj   # merge=binary
+*.vcxproj  # merge=binary
+*.vcproj   # merge=binary
+*.dbproj   # merge=binary
+*.fsproj   # merge=binary
+*.lsproj   # merge=binary
+*.wixproj  # merge=binary
+*.modelproj# merge=binary
+*.sqlproj  # merge=binary
+*.wwaproj  # merge=binary
+*.opensdf
+*.sdf
+*.sln
+*.v11.suo
+*.vcxproj
+*.vcxproj.filters
+*.vcxproj.user
