--- a/VS2012/_Ogre-Snake/Win32Project1.vcxproj.filters
+++ b/VS2012/_Ogre-Snake/Win32Project1.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="..\..\src\BaseApplication.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\BlockRenderer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\model\Snake.h">
@@ -51,6 +54,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\BaseApplication.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\BlockRenderer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
